# py_m3u

./: README.md  setup.cfg
py_m3u/: __init__.py  _m3u.py  _type_aliases.py
src/py_m3u/: _m3u.py  directives.py
