[metadata]
name = py_m3u
version = 0.0.1
author = Eastern-Skill7173
description = A simple and flexible m3u parser in python with no third-party requirements
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Eastern-Skill7173/py_m3u

[options]
package_dir =
    =.
packages =
    py_m3u
python_requires = >=3.8
